{
    "name": "GeneralControls",
    "maps": [
        {
            "name": "DefaultMapping",
            "id": "026bf187-d26b-49ef-bb38-c0ed3249524d",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "fc7ce480-3b48-40f8-96cb-1d2c1d87a175",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlacePoint",
                    "type": "Button",
                    "id": "3930ce6e-2c62-4f25-bbcd-b13d1a2ffd6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PanCameraLock",
                    "type": "Button",
                    "id": "9b09f950-8d54-45d4-8cbf-dd520e23e914",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PanCameraMove",
                    "type": "Value",
                    "id": "4cc510ee-288e-4f9c-b5db-c542f75365bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81246e4c-a529-464f-b328-62d292281117",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6132a3ea-2e77-4b5c-869f-b842488d0c42",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlacePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1db75516-f157-411f-9bf2-1d7f3c6281bc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCameraLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9082b8e2-2fdb-45d8-ba83-9a9b757f1507",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}